[gd_scene load_steps=7 format=3 uid="uid://cipws2lio15ta"]

[ext_resource type="Script" uid="uid://b3xbbss4qxbrd" path="res://space.gd" id="1_fw2y2"]
[ext_resource type="Texture2D" uid="uid://b72dc1j4s7fpl" path="res://assets/space_background_pack/layers/parallax-space-backgound.png" id="1_im7uv"]
[ext_resource type="Texture2D" uid="uid://bp7vqkm130ww8" path="res://assets/space_background_pack/layers/parallax-space-stars.png" id="2_fw2y2"]
[ext_resource type="Texture2D" uid="uid://dtj78yihe3uxv" path="res://assets/space_background_pack/layers/parallax-space-far-planets.png" id="3_l4lk4"]
[ext_resource type="Texture2D" uid="uid://dhnf42ctuh0kw" path="res://assets/space_background_pack/layers/parallax-space-ring-planet.png" id="4_7rikv"]
[ext_resource type="Texture2D" uid="uid://7svak2ndthx6" path="res://assets/space_background_pack/layers/parallax-space-big-planet.png" id="5_8bg48"]

[node name="BackgroundParallax" type="Node2D"]

[node name="Space" type="Node2D" parent="."]
position = Vector2(320, 640)
scale = Vector2(8, 8)
script = ExtResource("1_fw2y2")

[node name="Background" type="Parallax2D" parent="Space"]
scroll_scale = Vector2(0.05, 1)
repeat_size = Vector2(272, 0)
repeat_times = 2

[node name="Middle" type="Sprite2D" parent="Space/Background"]
texture = ExtResource("1_im7uv")

[node name="Stars" type="Parallax2D" parent="Space"]
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(272, 0)
repeat_times = 2
ignore_camera_scroll = true

[node name="Middle" type="Sprite2D" parent="Space/Stars"]
texture = ExtResource("2_fw2y2")

[node name="FarPlanets" type="Parallax2D" parent="Space"]
scroll_scale = Vector2(0.2, 1)
repeat_size = Vector2(272, 0)
repeat_times = 2

[node name="Middle" type="Sprite2D" parent="Space/FarPlanets"]
texture = ExtResource("3_l4lk4")

[node name="RingPlanet" type="Parallax2D" parent="Space"]
scroll_scale = Vector2(0.3, 1)
repeat_size = Vector2(272, 0)
repeat_times = 2

[node name="Middle" type="Sprite2D" parent="Space/RingPlanet"]
position = Vector2(-68, 32)
texture = ExtResource("4_7rikv")

[node name="BigPlanet" type="Parallax2D" parent="Space"]
scroll_scale = Vector2(0.4, 1)
repeat_size = Vector2(272, 0)
repeat_times = 2

[node name="Middle" type="Sprite2D" parent="Space/BigPlanet"]
position = Vector2(17, -26)
texture = ExtResource("5_8bg48")
